--- a/catalog.html
+++ b/catalog.html
@@ -31,200 +31,206 @@
 
   <main class="page-main">
     <h1>Магазин готовых шаблонов</h1>
-    <section class="main-filter">
-      <h2 class="hidden">Фильтр товаров</h2>
-      <form action="https://echo.htmlacademy.ru" method="get">
-        <fieldset>
-          <legend>Стоимость:</legend>
-          <input type="range" name="cost" id="filter-cost" min="0" max="15000">
-          <label>от <input type="number" name="price-begin"></label>
-          <label>до <input type="number" name="price-finish"></label>
-        </fieldset>
-        <fieldset>
-          <legend>Сетка:</legend>
-          <ul class="filter-list">
-            <li class="radio-item filter-item">
-              <input type="radio" checked name="layout" value="adaptive" id="filter-adaptive">
-              <label for="filter-adaptive">Адаптивная</label>
-            </li>
-            <li class="radio-item filter-item">
-              <input type="radio" name="layout" value="fix" id="filter-fix">
-              <label for="filter-fix">Фиксированная</label>
-            </li>
-            <li class="radio-item filter-item">
-              <input type="radio" name="layout" value="rubber" id="filter-rubber">
-              <label for="filter-rubber">Резиновая</label>
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset>
-          <legend>Особенности:</legend>
-          <ul class="filter-list">
-            <li class="checkbox-item filter-item">
-              <input type="checkbox" checked name="slider" id="filter-slider">
-              <label for="filter-slider">Слайдер</label>
-            </li>
-            <li class="checkbox-item filter-item">
-              <input type="checkbox" name="advantages" id="filter-advantages">
-              <label for="filter-advantages">Блок преимуществ</label>
-            </li>
-            <li class="checkbox-item filter-item">
-              <input type="checkbox" checked name="news" id="filter-news">
-              <label for="filter-news">Новости</label>
-            </li>
-            <li class="checkbox-item filter-item">
-              <input type="checkbox" name="gallery" id="filter-gallery">
-              <label for="filter-gallery">Галерея</label>
-            </li>
-            <li class="checkbox-item filter-item">
-              <input type="checkbox" name="basket" id="filter-basket">
-              <label for="filter-basket">Корзина</label>
-            </li>
-          </ul>
-        </fieldset>
-        <button class="button filter-button" type="submit">Показать</button>
-      </form>
+    <div class="main-catalog-wrapper">
+      <section class="main-filter">
+        <h2 class="hidden">Фильтр товаров</h2>
+        <form action="https://echo.htmlacademy.ru" method="get">
+          <fieldset>
+            <legend>Стоимость:</legend>
+            <input type="range" name="cost" id="filter-cost" min="0" max="15000">
+            <label>от <input type="number" name="price-begin"></label>
+            <label>до <input type="number" name="price-finish"></label>
+          </fieldset>
+          <fieldset>
+            <legend>Сетка:</legend>
+            <ul class="filter-list">
+              <li class="radio-item filter-item">
+                <input type="radio" checked name="layout" value="adaptive" id="filter-adaptive">
+                <label for="filter-adaptive">Адаптивная</label>
+              </li>
+              <li class="radio-item filter-item">
+                <input type="radio" name="layout" value="fix" id="filter-fix">
+                <label for="filter-fix">Фиксированная</label>
+              </li>
+              <li class="radio-item filter-item">
+                <input type="radio" name="layout" value="rubber" id="filter-rubber">
+                <label for="filter-rubber">Резиновая</label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset>
+            <legend>Особенности:</legend>
+            <ul class="filter-list">
+              <li class="checkbox-item filter-item">
+                <input type="checkbox" checked name="slider" id="filter-slider">
+                <label for="filter-slider">Слайдер</label>
+              </li>
+              <li class="checkbox-item filter-item">
+                <input type="checkbox" name="advantages" id="filter-advantages">
+                <label for="filter-advantages">Блок преимуществ</label>
+              </li>
+              <li class="checkbox-item filter-item">
+                <input type="checkbox" checked name="news" id="filter-news">
+                <label for="filter-news">Новости</label>
+              </li>
+              <li class="checkbox-item filter-item">
+                <input type="checkbox" name="gallery" id="filter-gallery">
+                <label for="filter-gallery">Галерея</label>
+              </li>
+              <li class="checkbox-item filter-item">
+                <input type="checkbox" name="basket" id="filter-basket">
+                <label for="filter-basket">Корзина</label>
+              </li>
+            </ul>
+          </fieldset>
+          <button class="button filter-button" type="submit">Показать</button>
+        </form>
+      </section>
+      <section class="main-sorting">
+        <h2 class="sorting-title">Сортировать:</h2>
+        <h3 class="hidden">Тип сортировки</h3>
+        <ul class="sorting-type-list">
+          <li>
+            <a class="sorting-item sorting-item-active" href="blank.html">по цене</a>
+          </li>
+          <li>
+            <a class="sorting-item" href="blank.html">по типу</a>
+          </li>
+          <li>
+            <a class="sorting-item" href="blank.html">по названию</a>
+          </li>
+        </ul>
 
-      <h2 class="sorting-title">Сортировать:</h2>
-      <h3 class="hidden">Тип сортировки</h3>
-      <ul class="sorting-type-list">
-        <li>
-          <a class="sorting-item sorting-item-active" href="blank.html">по цене</a>
-        </li>
-        <li>
-          <a class="sorting-item" href="blank.html">по типу</a>
-        </li>
-        <li>
-          <a class="sorting-item" href="blank.html">по названию</a>
-        </li>
-      </ul>
-
-      <h3 class="hidden">Направление сортировки</h3>
-      <ul>
-        <li>
-          <a class="sorting-decrease sorting-decrease-active" href="blank.html">по убыванию</a>
-        </li>
-        <li>
-          <a class="sorting-increase" href="blank.html">по возрастанию</a>
-        </li>
-      </ul>
-    </section>
-    <section class="templates">
-      <h2 class="hidden">Шаблоны</h2>
-      <ul class="templates-list">
-        <li class="template-item">
-          <a href="blank.html">
-            <img src="img/templates/sedona.png" width="358" height="578" alt="Седона">
-          </a>
-          <div class="template-description">
+        <h3 class="hidden">Направление сортировки</h3>
+        <ul class="sortin-direction-list">
+          <li>
+            <a class="sorting-decrease sorting-decrease-active" href="blank.html">по убыванию</a>
+          </li>
+          <li>
+            <a class="sorting-increase" href="blank.html">по возрастанию</a>
+          </li>
+        </ul>
+      </section>
+      <section class="templates">
+        <h2 class="hidden">Шаблоны</h2>
+        <ul class="templates-list">
+          <li class="template-item">
             <a href="blank.html">
-              <h3>Sedona</h3>
+              <img src="img/templates/sedona.png" width="358" height="578" alt="Седона">
             </a>
-            <p>Информационный сайт<br> для туристов</p>
-            <a class="button" href="blank.html">
-              9 900 ₽
-            </a>
-          </div>
-        </li>
-        <li class="template-item">
-          <a href="blank.html">
-            <img src="img/templates/pink.png" width="358" height="578" alt="Пинк">
-          </a>
-          <div class="template-description">
+            <div class="template-description">
+              <a href="blank.html">
+                <h3>Sedona</h3>
+              </a>
+              <p>Информационный сайт<br> для туристов</p>
+              <a class="button" href="blank.html">
+                9 900 ₽
+              </a>
+            </div>
+          </li>
+          <li class="template-item">
             <a href="blank.html">
-              <h3>Pink App</h3>
+              <img src="img/templates/pink.png" width="358" height="578" alt="Пинк">
             </a>
-            <p>Продуктовый лендинг<br> приложения для iOS и Android</p>
-            <a class="button" href="blank.html">
-              9 900 ₽
-            </a>
-          </div>
-        </li>
-        <li class="template-item">
-          <a href="blank.html">
-            <img src="img/templates/barbershop.png" width="358" height="578" alt="Барбершоп">
-          </a>
-          <div class="template-description">
+            <div class="template-description">
+              <a href="blank.html">
+                <h3>Pink App</h3>
+              </a>
+              <p>Продуктовый лендинг<br> приложения для iOS и Android</p>
+              <a class="button" href="blank.html">
+                9 900 ₽
+              </a>
+            </div>
+          </li>
+          <li class="template-item">
             <a href="blank.html">
-              <h3>Barbershop</h3>
+              <img src="img/templates/barbershop.png" width="358" height="578" alt="Барбершоп">
             </a>
-            <p>Сайт салона красоты.<br> Для мужчин, да.</p>
-            <a class="button" href="blank.html">
-              9 900 ₽
-            </a>
-          </div>
-        </li>
-        <li class="template-item">
-          <a href="blank.html">
-            <img src="img/templates/mishka.png" width="358" height="578" alt="Мишка">
-          </a>
-          <div class="template-description">
+            <div class="template-description">
+              <a href="blank.html">
+                <h3>Barbershop</h3>
+              </a>
+              <p>Сайт салона красоты.<br> Для мужчин, да.</p>
+              <a class="button" href="blank.html">
+                9 900 ₽
+              </a>
+            </div>
+          </li>
+          <li class="template-item">
             <a href="blank.html">
-              <h3>MISHKA</h3>
+              <img src="img/templates/mishka.png" width="358" height="578" alt="Мишка">
             </a>
-            <p>Интернет-магазин<br> вязаных игрушек</p>
-            <a class="button" href="blank.html">
-              9 900 ₽
-            </a>
-          </div>
-        </li>
-        <li class="template-item">
-          <a href="blank.html">
-            <img src="img/templates/a-plus.png" width="358" height="578" alt="A Plus">
-          </a>
-          <div class="template-description">
+            <div class="template-description">
+              <a href="blank.html">
+                <h3>MISHKA</h3>
+              </a>
+              <p>Интернет-магазин<br> вязаных игрушек</p>
+              <a class="button" href="blank.html">
+                9 900 ₽
+              </a>
+            </div>
+          </li>
+          <li class="template-item">
             <a href="blank.html">
-              <h3>A Plus</h3>
+              <img src="img/templates/a-plus.png" width="358" height="578" alt="A Plus">
             </a>
-            <p>Лендинг курсов повышения квалификации</p>
-            <a class="button" href="blank.html">
-              9 900 ₽
-            </a>
-          </div>
-        </li>
-        <li class="template-item">
-          <a href="blank.html">
-            <img src="img/templates/kvast.png" width="358" height="578" alt="КВАСТ">
-          </a>
-          <div class="template-description">
+            <div class="template-description">
+              <a href="blank.html">
+                <h3>A Plus</h3>
+              </a>
+              <p>Лендинг курсов повышения квалификации</p>
+              <a class="button" href="blank.html">
+                9 900 ₽
+              </a>
+            </div>
+          </li>
+          <li class="template-item">
             <a href="blank.html">
-              <h3>КВАСТ</h3>
+              <img src="img/templates/kvast.png" width="358" height="578" alt="КВАСТ">
             </a>
-            <p>Промо-сайт производителя<br> крафтового кваса</p>
-            <a class="button" href="blank.html">
-              9 900 ₽
-            </a>
-          </div>
-        </li>
-      </ul>
-      <ul class="pagination-list">
-        <li class="pagination-item pagination-item-active">
-          <a class="pagination-link">1</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="blank.html">2</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="blank.html">3</a>
-        </li>
-        <li class="pagination-item">
-          <a class="pagination-link" href="blank.html">Следующая</a>
-        </li>
-      </ul>
-    </section>
+            <div class="template-description">
+              <a href="blank.html">
+                <h3>КВАСТ</h3>
+              </a>
+              <p>Промо-сайт производителя<br> крафтового кваса</p>
+              <a class="button" href="blank.html">
+                9 900 ₽
+              </a>
+            </div>
+          </li>
+        </ul>
+        <ul class="pagination-list">
+          <li class="pagination-item pagination-item-active">
+            <a class="pagination-link">1</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="blank.html">2</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="blank.html">3</a>
+          </li>
+          <li class="pagination-item">
+            <a class="pagination-link" href="blank.html">Следующая</a>
+          </li>
+        </ul>
+      </section>
+    </div>
   </main>
   <footer class="main-footer">
     <section class="map">
       <img src="img/map.png" width="1440" height="416" alt="Карта проезда к студии Нердс">
     </section>
-    <section class="contacts">
-      <h2>Контакты</h2>
-      <p class="contact-title">NЁRDS DESIGN STUDIO</p>
-      <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75</p>
-      <a class="button" href="blank.html">Напишите нам</a>
-    </section>
-    <section class="footer-social">
-      <h2>Давайте дружить!</h2>
+    <div class="contact-wrapper container">
+      <section class="contacts">
+        <h2 class="hidden">Контакты</h2>
+        <p class="contact-title">NЁRDS DESIGN STUDIO</p>
+        <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75
+        </p>
+        <a class="button" href="blank.html">Напишите нам</a>
+      </section>
+    </div>
+    <section class="footer-social container">
+      <h2 class="hidden">Давайте дружить!</h2>
       <ul class="social-list">
         <li>
           <a class="social-item" href="#"><span class="hidden">Вконтакте</span></a>
@@ -261,6 +267,7 @@
     </form>
     <button class="modal-close" type="button">Закрыть</button>
   </section>
+
 </body>
 
 </html>
