--- a/blank.html
+++ b/blank.html
@@ -35,14 +35,17 @@
     <section class="map">
       <img src="img/map.png" width="1440" height="416" alt="Карта проезда к студии Нердс">
     </section>
-    <section class="contacts">
-      <h2>Контакты</h2>
-      <p class="contact-title">NЁRDS DESIGN STUDIO</p>
-      <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75</p>
-      <a class="button" href="blank.html">Напишите нам</a>
-    </section>
-    <section class="footer-social">
-      <h2>Давайте дружить!</h2>
+    <div class="contact-wrapper container">
+      <section class="contacts">
+        <h2 class="hidden">Контакты</h2>
+        <p class="contact-title">NЁRDS DESIGN STUDIO</p>
+        <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75
+        </p>
+        <a class="button" href="blank.html">Напишите нам</a>
+      </section>
+    </div>
+    <section class="footer-social container">
+      <h2 class="hidden">Давайте дружить!</h2>
       <ul class="social-list">
         <li>
           <a class="social-item" href="#"><span class="hidden">Вконтакте</span></a>
@@ -79,7 +82,5 @@
     </form>
     <button class="modal-close" type="button">Закрыть</button>
   </section>
-
-</body>
 
 </html>
