--- a/catalog.html
+++ b/catalog.html
@@ -105,7 +105,7 @@
         </ul>
 
         <h3 class="hidden">Направление сортировки</h3>
-        <ul class="sortin-direction-list">
+        <ul class="sorting-direction-list">
           <li>
             <a class="sorting-decrease sorting-decrease-active" href="blank.html">по убыванию</a>
           </li>
