--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="page-body">
 
-  <header class="main-header">
+  <header class="main-header filled-section">
     <nav class="main-nav">
       <a class="main-header-logo">
         <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
@@ -34,20 +34,24 @@
     <section>
       <h2 class="hidden">Информация</h2>
 
-      <div class="slider">
+      <div class="slider filled-section">
         <div>
           <div class="slide slide-active">
-            <p class="slide-title">Долго, дорого,<br>
-              скурпулезно.</p>
-            <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
-            <a class="button" href="blank.html">Узнать больше</a>
+            <div class="slide-text">
+              <p class="slide-title">Долго, дорого,<br>
+                скурпулезно.</p>
+              <p>Математически выверенный дизайн<br> для вашего сайта или мобильного приложения.</p>
+              <a class="button" href="blank.html">Узнать больше</a>
+            </div>
             <img src="img/slider/nerds-index-slide1.png" width="760" height="431" alt="">
           </div>
           <div class="slide">
-            <p class="slide-title">Любим математику<br>
-              как никто другой</p>
-            <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
-            <a class="button" href="blank.html">Узнать больше</a>
+            <div class="slide-text">
+              <p class="slide-title">Любим математику<br>
+                как никто другой</p>
+              <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
+              <a class="button" href="blank.html">Узнать больше</a>
+            </div>
             <img src="img/slider/nerds-index-slide2.png" width="760" height="431" alt="">
           </div>
           <div class="slide">
