сетки на флексах

--- a/catalog.html
+++ b/catalog.html
@@ -220,17 +220,19 @@
     </div>
   </main>
   <footer class="main-footer">
-    <section class="map">
-      <img src="img/map.png" width="1440" height="416" alt="Карта проезда к студии Нердс">
-    </section>
-    <div class="contact-wrapper container">
-      <section class="contacts">
-        <h2 class="hidden">Контакты</h2>
-        <p class="contact-title">NЁRDS DESIGN STUDIO</p>
-        <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75
-        </p>
-        <a class="button" href="blank.html">Напишите нам</a>
+    <div class="map-wrapper">
+      <section class="map">
+        <img src="img/map.png" width="1440" height="416" alt="Карта проезда к студии Нердс">
       </section>
+      <div class="contact-wrapper container">
+        <section class="contacts">
+          <h2 class="hidden">Контакты</h2>
+          <p class="contact-title">NЁRDS DESIGN STUDIO</p>
+          <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75
+          </p>
+          <a class="button" href="blank.html">Напишите нам</a>
+        </section>
+      </div>
     </div>
     <section class="footer-social container">
       <h2 class="hidden">Давайте дружить!</h2>
