--- a/blank.html
+++ b/blank.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -37,7 +37,7 @@
     </section>
     <div class="contact-wrapper container">
       <section class="contacts">
-        <h2 class="hidden">Контакты</h2>
+        <h2 class="visually-hidden">Контакты</h2>
         <p class="contact-title">NЁRDS DESIGN STUDIO</p>
         <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75
         </p>
@@ -45,16 +45,16 @@
       </section>
     </div>
     <section class="footer-social container">
-      <h2 class="hidden">Давайте дружить!</h2>
+      <h2 class="visually-hidden">Давайте дружить!</h2>
       <ul class="social-list">
         <li>
-          <a class="social-item" href="#"><span class="hidden">Вконтакте</span></a>
+          <a class="social-item" href="#"><span class="visually-hidden">Вконтакте</span></a>
         </li>
         <li>
-          <a class="social-item" href="#"><span class="hidden">Фейсбук</span></a>
+          <a class="social-item" href="#"><span class="visually-hidden">Фейсбук</span></a>
         </li>
         <li>
-          <a class="social-item" href="#"><span class="hidden">Инстаграм</span></a>
+          <a class="social-item" href="#"><span class="visually-hidden">Инстаграм</span></a>
         </li>
       </ul>
       <p class="social-title"><b>Давайте дружить, это выгодно!</b></p>
