--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="utf-8">
@@ -35,7 +35,7 @@
     </div>
     <div class="main-catalog-wrapper container">
       <section class="main-filter">
-        <h2 class="hidden">Фильтр товаров</h2>
+        <h2 class="visually-hidden">Фильтр товаров</h2>
         <form action="https://echo.htmlacademy.ru" method="get">
           <fieldset>
             <legend>Стоимость:</legend>
@@ -48,15 +48,15 @@
             <legend>Сетка:</legend>
             <ul class="filter-list">
               <li class="radio-item filter-item">
-                <input type="radio" checked name="layout" value="adaptive" id="filter-adaptive">
+                <input class="visually-hidden" type="radio" checked name="layout" value="adaptive" id="filter-adaptive">
                 <label for="filter-adaptive">Адаптивная</label>
               </li>
               <li class="radio-item filter-item">
-                <input type="radio" name="layout" value="fix" id="filter-fix">
+                <input class="visually-hidden" type="radio" name="layout" value="fix" id="filter-fix">
                 <label for="filter-fix">Фиксированная</label>
               </li>
               <li class="radio-item filter-item">
-                <input type="radio" name="layout" value="rubber" id="filter-rubber">
+                <input class="visually-hidden" type="radio" name="layout" value="rubber" id="filter-rubber">
                 <label for="filter-rubber">Резиновая</label>
               </li>
             </ul>
@@ -65,23 +65,23 @@
             <legend>Особенности:</legend>
             <ul class="filter-list">
               <li class="checkbox-item filter-item">
-                <input type="checkbox" checked name="slider" id="filter-slider">
+                <input class="visually-hidden" type="checkbox" checked name="slider" id="filter-slider">
                 <label for="filter-slider">Слайдер</label>
               </li>
               <li class="checkbox-item filter-item">
-                <input type="checkbox" name="advantages" id="filter-advantages">
+                <input class="visually-hidden" type="checkbox" name="advantages" id="filter-advantages">
                 <label for="filter-advantages">Блок преимуществ</label>
               </li>
               <li class="checkbox-item filter-item">
-                <input type="checkbox" checked name="news" id="filter-news">
+                <input class="visually-hidden" type="checkbox" checked name="news" id="filter-news">
                 <label for="filter-news">Новости</label>
               </li>
               <li class="checkbox-item filter-item">
-                <input type="checkbox" name="gallery" id="filter-gallery">
+                <input class="visually-hidden" type="checkbox" name="gallery" id="filter-gallery">
                 <label for="filter-gallery">Галерея</label>
               </li>
               <li class="checkbox-item filter-item">
-                <input type="checkbox" name="basket" id="filter-basket">
+                <input class="visually-hidden" type="checkbox" name="basket" id="filter-basket">
                 <label for="filter-basket">Корзина</label>
               </li>
             </ul>
@@ -91,7 +91,7 @@
       </section>
       <section class="main-sorting">
         <h2 class="sorting-title">Сортировать:</h2>
-        <h3 class="hidden">Тип сортировки</h3>
+        <h3 class="visually-hidden">Тип сортировки</h3>
         <ul class="sorting-type-list">
           <li>
             <a class="sorting-item sorting-item-active" href="blank.html">по цене</a>
@@ -104,7 +104,7 @@
           </li>
         </ul>
 
-        <h3 class="hidden">Направление сортировки</h3>
+        <h3 class="visually-hidden">Направление сортировки</h3>
         <ul class="sorting-direction-list">
           <li>
             <a class="sorting-decrease sorting-decrease-active" href="blank.html">по убыванию</a>
@@ -115,7 +115,7 @@
         </ul>
       </section>
       <section class="templates">
-        <h2 class="hidden">Шаблоны</h2>
+        <h2 class="visually-hidden">Шаблоны</h2>
         <ul class="templates-list">
           <li class="template-item">
             <a href="blank.html">
@@ -226,7 +226,7 @@
       </section>
       <div class="contact-wrapper container">
         <section class="contacts">
-          <h2 class="hidden">Контакты</h2>
+          <h2 class="visually-hidden">Контакты</h2>
           <p class="contact-title">NЁRDS DESIGN STUDIO</p>
           <p class="contact-text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8<br> тел. +7 (812) 275-75-75
           </p>
@@ -235,16 +235,16 @@
       </div>
     </div>
     <section class="footer-social container">
-      <h2 class="hidden">Давайте дружить!</h2>
+      <h2 class="visually-hidden">Давайте дружить!</h2>
       <ul class="social-list">
         <li>
-          <a class="social-item" href="#"><span class="hidden">Вконтакте</span></a>
+          <a class="social-item" href="#"><span class="visually-hidden">Вконтакте</span></a>
         </li>
         <li>
-          <a class="social-item" href="#"><span class="hidden">Фейсбук</span></a>
+          <a class="social-item" href="#"><span class="visually-hidden">Фейсбук</span></a>
         </li>
         <li>
-          <a class="social-item" href="#"><span class="hidden">Инстаграм</span></a>
+          <a class="social-item" href="#"><span class="visually-hidden">Инстаграм</span></a>
         </li>
       </ul>
       <p class="social-title"><b>Давайте дружить, это выгодно!</b></p>
